2005-08-06  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/ImageWriter.cs
	  CodeGen/templates/MetadataTableWriter.cs
	  Mono.Cecil.Metadata/MetadataInitializer.cs
	  Mono.Cecil.Metadata/MetadataTableWriter.cs
	  Mono.Cecil.Metadata/StringsHeap.cs
	  Mono.Cecil.Metadata/BlobHeap.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Metadata/UserStringsHeap.cs
	  Mono.Cecil.Metadata/TableCollection.cs
	  Mono.Cecil.Metadata/TablesHeap.cs
	  Mono.Cecil.Metadata/MetadataHeap.cs
	  Mono.Cecil.Metadata/GuidHeap.cs
	  Mono.Cecil.Metadata/MetadataStream.cs
	  Mono.Cecil.Implem/StructureWriter.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs
	  Mono.Cecil.Implem/CodeWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Binary/ImageInitializer.cs:
		Playing lego with bricks from the writing layer.

	* Mono.Cecil.dll.sources:
		Updated.
	* CodeGen/templates/CLIHeader.cs
	  CodeGen/templates/PEOptionalHeader.cs
		Blah.
	* CodeGen/cecil.xml
	  Mono.Cecil.Binary/CLIHeader.cs
	  Mono.Cecil.Binary/PEOptionalHeader.cs:
	  Mono.Cecil.Binary/PEFileHeader.cs
		On going work on the writing layer

	* CodeGen/templates/ImageWriter.cs
	  CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Binary/BaseImageVisitor.cs
	  Mono.Cecil.Binary/ImageReader.cs
	  Mono.Cecil.Binary/ImageInitializer.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Metadata/BaseMetadataVisitor.cs
	  Mono.Cecil.Metadata/MetadataReader.cs
	  Mono.Cecil.Metadata/MetadataInitializer.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Metadata/MetadataStream.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs
	  Mono.Cecil.Implem/CodeWriter.cs:
		Add helpers visitor.
		On going work on the writing layer.

	* CodeGen/templates/Utilities.cs
	  CodeGen/templates/MetadataRowReader.cs
	  CodeGen/templates/MetadataRowWriter.cs
	  Mono.Cecil.Metadata/StringsHeap.cs
	  Mono.Cecil.Metadata/MetadataRowReader.cs
	  Mono.Cecil.Metadata/MetadataRowWriter.cs
	  Mono.Cecil.Metadata/MetadataReader.cs