@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Sat Aug 06 20:26:53 CEST 2005
+ * Sun Aug 07 00:56:51 CEST 2005
  *
  *****************************************************************************/
 
@@ -30,12 +30,13 @@ namespace Mono.Cecil.Binary {
 		private BinaryWriter m_resWriter;
 		private BinaryWriter m_textWriter;
 
-		public ImageWriter (MetadataWriter mdw, BinaryWriter writer)
+		public ImageWriter (MetadataWriter writer, BinaryWriter bw)
 		{
-			m_img = mdw.GetMetadataRoot ().GetImage ();
-			m_binaryWriter = writer;
+			m_img = writer.GetMetadataRoot ().GetImage ();
+			m_binaryWriter = bw;
 
 			m_textWriter = new BinaryWriter (new MemoryStream ());
+			m_textWriter.BaseStream.Position = 78;
 		}
 
 		public Image GetImage ()
@@ -53,6 +54,8 @@ namespace Mono.Cecil.Binary {
 			if (m_resWriter == null) {
 				Section rs = new Section ();
 				rs.Name = ".res";
+				rs.Characteristics = SectionCharacteristics.ContainsInitializedData |
+					SectionCharacteristics.MemoryRead; 
 				m_img.Sections.Add (rs);
 				m_resWriter = new BinaryWriter (new MemoryStream ());
 			}
@@ -60,6 +63,12 @@ namespace Mono.Cecil.Binary {
 			uint offset = (uint) m_resWriter.BaseStream.Position;
 			m_resWriter.Write (res);
 			return offset;
+		}
+
+		public override void Visit (Image img)
+		{
+			// size computations, fields setting, etc.
+			img.PEFileHeader.NumberOfSections = (ushort) img.Sections.Count;
 		}
 
 		public override void Visit (DOSHeader header)
@@ -178,55 +187,60 @@ namespace Mono.Cecil.Binary {
 
 		public override void Visit (ImportAddressTable iat)
 		{
-			m_binaryWriter.Write (iat.HintNameTableRVA.Value);
+			m_textWriter.Write (iat.HintNameTableRVA.Value);
 		}
 
 		public override void Visit (CLIHeader header)
 		{
-			m_binaryWriter.Write (header.Cb);
-			m_binaryWriter.Write (header.MajorRuntimeVersion);
-			m_binaryWriter.Write (header.MinorRuntimeVersion);
-			m_binaryWriter.Write (header.Metadata.VirtualAddress);
-			m_binaryWriter.Write (header.Metadata.Size);
-			m_binaryWriter.Write ((uint) header.Flags);
-			m_binaryWriter.Write (header.EntryPointToken);
-			m_binaryWriter.Write (header.Resources.VirtualAddress);
-			m_binaryWriter.Write (header.Resources.Size);
-			m_binaryWriter.Write (header.StrongNameSignature.VirtualAddress);
-			m_binaryWriter.Write (header.StrongNameSignature.Size);
-			m_binaryWriter.Write (header.CodeManagerTable.VirtualAddress);
-			m_binaryWriter.Write (header.CodeManagerTable.Size);
-			m_binaryWriter.Write (header.VTableFixups.VirtualAddress);
-			m_binaryWriter.Write (header.VTableFixups.Size);
-			m_binaryWriter.Write (header.ExportAddressTableJumps.VirtualAddress);
-			m_binaryWriter.Write (header.ExportAddressTableJumps.Size);
-			m_binaryWriter.Write (header.ManagedNativeHeader.VirtualAddress);
-			m_binaryWriter.Write (header.ManagedNativeHeader.Size);
+			m_textWriter.Write (header.Cb);
+			m_textWriter.Write (header.MajorRuntimeVersion);
+			m_textWriter.Write (header.MinorRuntimeVersion);
+			m_textWriter.Write (header.Metadata.VirtualAddress);
+			m_textWriter.Write (header.Metadata.Size);
+			m_textWriter.Write ((uint) header.Flags);
+			m_textWriter.Write (header.EntryPointToken);
+			m_textWriter.Write (header.Resources.VirtualAddress);
+			m_textWriter.Write (header.Resources.Size);
+			m_textWriter.Write (header.StrongNameSignature.VirtualAddress);
+			m_textWriter.Write (header.StrongNameSignature.Size);
+			m_textWriter.Write (header.CodeManagerTable.VirtualAddress);
+			m_textWriter.Write (header.CodeManagerTable.Size);
+			m_textWriter.Write (header.VTableFixups.VirtualAddress);
+			m_textWriter.Write (header.VTableFixups.Size);
+			m_textWriter.Write (header.ExportAddressTableJumps.VirtualAddress);
+			m_textWriter.Write (header.ExportAddressTableJumps.Size);
+			m_textWriter.Write (header.ManagedNativeHeader.VirtualAddress);
+			m_textWriter.Write (header.ManagedNativeHeader.Size);
 		}
 
 		public override void Visit (ImportTable it)
 		{
-			m_binaryWriter.Write (it.ImportAddressTable.Value);
-			m_binaryWriter.Write (it.DateTimeStamp);
-			m_binaryWriter.Write (it.ForwardChain);
-			m_binaryWriter.Write (it.Name.Value);
-			m_binaryWriter.Write (it.ImportAddressTable.Value);
+			m_textWriter.Write (it.ImportAddressTable.Value);
+			m_textWriter.Write (it.DateTimeStamp);
+			m_textWriter.Write (it.ForwardChain);
+			m_textWriter.Write (it.Name.Value);
+			m_textWriter.Write (it.ImportAddressTable.Value);
 		}
 
 		public override void Visit (ImportLookupTable ilt)
 		{
-			m_binaryWriter.Write (ilt.HintNameRVA.Value);
+			m_textWriter.Write (ilt.HintNameRVA.Value);
 		}
 
 		public override void Visit (HintNameTable hnt)
 		{
-			m_binaryWriter.Write (hnt.Hint);
-			m_binaryWriter.Write (hnt.RuntimeMain);
-			m_binaryWriter.Write ('\0');
-			m_binaryWriter.Write (hnt.RuntimeLibrary);
-			m_binaryWriter.Write ('\0');
+			m_textWriter.Write (hnt.Hint);
+			m_textWriter.Write (hnt.RuntimeMain);
+			m_textWriter.Write ('\0');
+			m_textWriter.Write (hnt.RuntimeLibrary);
+			m_textWriter.Write ('\0');
 
 			// ep + rva
+		}
+
+		public override void Terminate (Image img)
+		{
+			// write sections, align the whole thing
 		}
 	}
 }
