@@ -1,3 +1,11 @@
+2005-08-07  Jb Evain  <jbevain@gmail.com>
+
+	* CodeGen/templates/ImageWriter.cs
+	  Mono.Cecil.Metadata/MetadataWriter.cs
+	  Mono.Cecil.Binary/ImageWriter.cs
+	  Mono.Cecil.Binary/ImageInitializer.cs:
+		More writing layer stuff.
+
 2005-08-06  Jb Evain  <jbevain@gmail.com>
 
 	* CodeGen/templates/ImageWriter.cs
